--- a/nano-httpd-sample/build.gradle
+++ b/nano-httpd-sample/build.gradle
@@ -2,6 +2,8 @@ group 'com.viber'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'eclipse'
 
 sourceCompatibility = 1.8
 
@@ -10,7 +12,7 @@ repositories {
 }
 
 dependencies {
-    compile group: 'com.viber', name: 'viber-bot', version: '1.0.8'
+    compile group: 'com.viber', name: 'viber-bot', version: '1.0.9'
     compile group: 'org.nanohttpd', name: 'nanohttpd', version: '2.3.1'
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
 }
